# winternlc

./: .gitignore  LICENSE  MANIFEST.in  README.md  median_exp_0.34.fits  median_exp_20.33.fits  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continuous_integration.yml
data/example_data/linearity_corrections/: README.md
sandbox/: roi_dataset_creator.py  utils.py  winter_image.py
tests/: __init__.py  test_download.py  test_nlc.py  test_script.py  update_references.py
winter_corrections/: config.py  corrections.py  get_corrections.py  make_rationial8_multithread_corrections.py
winternlc/: __init__.py  apply.py  config.py  corrections.py  example.py  get_corrections.py  make_generic_rational_corrections.py  make_median_img.py  make_polynomial_corrections.py  make_rationial8_multithread_corrections.py  mask.py  non_linear_correction.py  non_linear_correction_with_test.py  rational.py  utils.py  versions.py  zenodo.py
winternlc/create/: make_generic_rational_corrections.py  make_linearpoly_corrections.py  make_linpoly_corrections_multi.py  make_linpoly_corrections_multi_split.py  make_median_img.py  make_polynomial_corrections.py  make_rationial8_multithread_corrections.py  nlc_roi_sandbox_resampled_data.ipynb  split_linpoly_corrections.py  test.py  update_test_images_latest_version.py  utils.py
